// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Gallery /> should show data 1`] = `
<styled.div>
  <form
    onSubmit={[Function]}
  >
    <div
      className="grid"
    >
      <div
        className="col-1"
      >
        <select
          className="select"
          onChange={[Function]}
          value="subreddit"
        >
          <option
            value="subreddit"
          >
            Subreddit
          </option>
          <option
            value="album"
          >
            Imgur album
          </option>
        </select>
      </div>
      <div
        className="col-2"
      >
        <input
          className="name"
          onChange={[Function]}
          placeholder="Subreddit name (e.g. EarthPorn)"
          type="text"
          value=""
        />
      </div>
      <div
        className="col-1"
      >
        <button
          type="submit"
        >
          fetch
        </button>
      </div>
      <div
        className="col"
      >
        Or upload your own
         
        <input
          accept="image/*"
          name="image"
          onChange={[Function]}
          type="file"
        />
      </div>
    </div>
  </form>
  <div
    className="local-images"
  />
  <div
    className="imgur-images"
  >
    <h2>
      Imgur images
    </h2>
    <div
      className="grid"
    >
      <img
        className="col-2 image"
        key="TKQPXk2"
        onClick={[Function]}
        src="https://i.imgur.com/TKQPXk2.jpg"
      />
      <img
        className="col-2 image"
        key="q2uohuJ"
        onClick={[Function]}
        src="https://i.imgur.com/q2uohuJ.jpg"
      />
      <img
        className="col-2 image"
        key="pprl8Dk"
        onClick={[Function]}
        src="https://i.imgur.com/pprl8Dk.jpg"
      />
      <img
        className="col-2 image"
        key="KMebpmj"
        onClick={[Function]}
        src="https://i.imgur.com/KMebpmj.jpg"
      />
      <img
        className="col-2 image"
        key="0XeEmtO"
        onClick={[Function]}
        src="https://i.imgur.com/0XeEmtO.jpg"
      />
      <img
        className="col-2 image"
        key="N170Iao"
        onClick={[Function]}
        src="https://i.imgur.com/N170Iao.jpg"
      />
      <img
        className="col-2 image"
        key="iCtomjC"
        onClick={[Function]}
        src="https://i.imgur.com/iCtomjC.jpg"
      />
      <img
        className="col-2 image"
        key="a4G2gFu"
        onClick={[Function]}
        src="https://i.imgur.com/a4G2gFu.jpg"
      />
      <img
        className="col-2 image"
        key="dyln4by"
        onClick={[Function]}
        src="https://i.imgur.com/dyln4by.jpg"
      />
      <img
        className="col-2 image"
        key="DUZVPZV"
        onClick={[Function]}
        src="https://i.imgur.com/DUZVPZV.jpg"
      />
      <img
        className="col-2 image"
        key="ECzq95K"
        onClick={[Function]}
        src="https://i.imgur.com/ECzq95K.jpg"
      />
    </div>
  </div>
</styled.div>
`;

exports[`<Gallery /> should show local images on file upload 1`] = `
<styled.div>
  <form
    onSubmit={[Function]}
  >
    <div
      className="grid"
    >
      <div
        className="col-1"
      >
        <select
          className="select"
          onChange={[Function]}
          value="subreddit"
        >
          <option
            value="subreddit"
          >
            Subreddit
          </option>
          <option
            value="album"
          >
            Imgur album
          </option>
        </select>
      </div>
      <div
        className="col-2"
      >
        <input
          className="name"
          onChange={[Function]}
          placeholder="Subreddit name (e.g. EarthPorn)"
          type="text"
          value=""
        />
      </div>
      <div
        className="col-1"
      >
        <button
          type="submit"
        >
          fetch
        </button>
      </div>
      <div
        className="col"
      >
        Or upload your own
         
        <input
          accept="image/*"
          name="image"
          onChange={[Function]}
          type="file"
        />
      </div>
    </div>
  </form>
  <div
    className="local-images"
  >
    <React.Fragment>
      <h2>
        Local images
      </h2>
      <div
        className="grid"
      >
        <img
          className="col-2 image"
          key="foo"
          onClick={[Function]}
          src="base64"
        />
      </div>
    </React.Fragment>
  </div>
  <div
    className="imgur-images"
  >
    <h2>
      Imgur images
    </h2>
    <div
      className="grid"
    />
  </div>
</styled.div>
`;

exports[`<Gallery /> should show local images on file upload 2`] = `
<styled.div>
  <form
    onSubmit={[Function]}
  >
    <div
      className="grid"
    >
      <div
        className="col-1"
      >
        <select
          className="select"
          onChange={[Function]}
          value="subreddit"
        >
          <option
            value="subreddit"
          >
            Subreddit
          </option>
          <option
            value="album"
          >
            Imgur album
          </option>
        </select>
      </div>
      <div
        className="col-2"
      >
        <input
          className="name"
          onChange={[Function]}
          placeholder="Subreddit name (e.g. EarthPorn)"
          type="text"
          value=""
        />
      </div>
      <div
        className="col-1"
      >
        <button
          type="submit"
        >
          fetch
        </button>
      </div>
      <div
        className="col"
      >
        Or upload your own
         
        <input
          accept="image/*"
          name="image"
          onChange={[Function]}
          type="file"
        />
      </div>
    </div>
  </form>
  <div
    className="local-images"
  >
    <React.Fragment>
      <h2>
        Local images
      </h2>
      <div
        className="grid"
      >
        <img
          className="col-2 image"
          key="foo"
          onClick={[Function]}
          src="base64"
        />
      </div>
    </React.Fragment>
  </div>
  <div
    className="imgur-images"
  >
    <h2>
      Imgur images
    </h2>
    <div
      className="grid"
    />
  </div>
</styled.div>
`;
